# Lineaire-Algebra-Eindopdracht

./: CMakeLists.txt  conanfile.txt
resources/objects/: jezus.json  starfighter.json
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  CoordinateSystem.cpp  CoordinateSystem.hpp  EventSystem.cpp  EventSystem.hpp  Events.cpp  Events.hpp  Line.cpp  Line.hpp  Matrix.cpp  Matrix.hpp  Object3D.cpp  Object3D.hpp  ObjectManager.cpp  ObjectManager.hpp  SDLRenderer.cpp  SDLRenderer.hpp  Space.cpp  Space.hpp  Vector3D.cpp  Vector3D.hpp  main.cpp
src/3DObjects/: Axis.cpp  Axis.hpp  Bullet.cpp  Bullet.hpp  Cube.cpp  Cube.hpp  Jezus.cpp  Jezus.hpp  JsonObject3D.cpp  JsonObject3D.hpp  Object3D.cpp  Object3D.hpp  Pyramid.cpp  Pyramid.hpp  Spaceship.cpp  Spaceship.hpp
tests/: CMakeLists.txt  CameraTests.cpp  MatrixTests.cpp  Object3DTests.cpp  Vector3DTests.cpp
tests/src/: test1.cpp
